# lokalise-django-test

./: LICENSE  Makefile  README.md  pyproject.toml
.github/: translations-problem-matcher.json
.github/workflows/: ci.yml  translations.yml
project/: settings.py  urls.py
project/app/: urls.py  views.py
project/app/templates/: test.html
project/locale/: apps.py
project/locale/en/LC_MESSAGES/: django.po
project/locale/nb/LC_MESSAGES/: django.po
project/templates/: test.html
