[tool.poetry]
name = "lokalise-django-test"
version = "0.1.0"
description = ""
authors = ["Sigurd Ljødal <544451+ljodal@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
django-stubs = "^1.9.0"
types-babel = "^2.9.5"
ipython = "^8.0.1"
babel = {url = "https://github.com/kolonialno/babel/releases/download/v2.9.1-oda.1/Babel-2.9.1.tar.gz"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"
